--- a/index.html
+++ b/index.html
@@ -13,75 +13,16 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/40bcb3a434.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-     <div class="container">
-      <div class="row">
-        <div class="col-3">New York</div>
-        <div class="col-3">Paris</div>
-        <div class="col-3">Sydney</div>
-        <div class="col-3">Dubai</div>
-      </div>
-    </div>
-    <h1 id="searched-city">New York</h1>
-<h2 id="date-time"></h2>
-    <img src="images/cloudy.png" />
-    <p id="api-temp">65°F/18°C</p>
-    <p class="highlow">Low 63°F/18°C High 76°F/24°C</p>
-    <p class="rain">Precipitation: 100%</p>
     <div class="container">
-      <div class="row">
-          <div class="col-2">Now</div>
-          <div class="col-2">10am</div>
-          <div class="col-2">11am</div>
-          <div class="col-2">12pm</div>
-          <div class="col-2">1pm</div>
-          <div class="col-2">2pm</div>
-        </div>
-      </div>
-    </div> 
-    <img src="images/rain.png" class="rainsym1">
-    <img src="images/rain.png" class="rainsym2">
-    <img src="images/rain.png" class="rainsym3">
-    <img src="images/cloudy.png"class="cloud1">
-    <img src="images/cloudy.png"class="cloud2">
-    <img src="images/cloudy.png"class="cloud3">
-  <h4 class="mon">
-    Monday
-  </h4>
-  <img src="images/partcloud.jpeg"class="partcloud">
-  <h4 class="tues">
-    Tuesday
-  </h4>
-  <img src="images/partcloud.jpeg"class="partcloud1">
-  <h4 class="wed">
-    Wednesday
-  </h4>
-  <img src="images/partcloud.jpeg"class="partcloud2">
-  <h4 class="thurs">
-    Thursday
-  </h4>
-  <img src="images/rain.png"class="rainsym4">
-  <h4 class="fri">
-    Friday
-  </h4>
-  <img src="images/rain.png"class="rainsym5">
-  <h4 class="sat">
-    Saturday
-  </h4>
-  <img src="images/partcloud.jpeg"class="partcloud3">
-  <h4 class="sun">
-    Sunday
-  </h4>
-  <img src="images/partcloud.jpeg"class="partcloud4">
-  <h5 class="frmtxt">
-    Search
-  </h5>
-  <form id="search-form">
-    <input type="search" placeholder="Search Any City" autofocus="on" autocomplete="off" id="city-input">
-  </form>
-  <button type="button" class="btn btn-info">Search</button>
-  <a href="https://github.com/Neik1m/weather">Open-Source Code</a>
+      <div class="icon"><i class="fa fa-info" aria-hidden="true"></i></div>
+      <div class="content"><h3>stuff</h3></div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
