--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/style.css" />
     <link rel="stylesheet" href="" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
     <script
       src="https://kit.fontawesome.com/40bcb3a434.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-    <div class="container">
-      <div class="icon"><i class="fa fa-info" aria-hidden="true"></i></div>
-      <div class="content"><h3>stuff</h3></div>
+      <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
+      <div></div>
+      <h1 class="temp">26°</h1>
+      <h2 class="city">London</h2>
+      <p class="date">Tuesday, Jan 1st, 2022</p>
+      <p class="precip">Sunny</p>
+      <img class="sun" src="src/images/sun.png" alt="" />
+      <p class="back"></p>
+      <img class="balloon" src="src/images/balloons-2331488__480.webp" alt="">
     </div>
     <script src="src/app.js"></script>
   </body>
