--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <img class="sun" src="src/images/sun.png" alt="" />
       <p class="back"></p>
       <img class="balloon" src="src/images/balloons-2331488__480.webp" alt="">
+       <form id="search-form" class="searchForm" >
+    <input type="search" placeholder="Search Any City" autofocus="on" autocomplete="off" id="city-input" class="searchInput" >
+  </form>
+  <i class="fa-solid fa-magnifying-glass fa-xl fa-beat"></i>
     </div>
     <script src="src/app.js"></script>
   </body>
