Added JS to search

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
-      <h1 class="temp">26°</h1>
-      <h2 class="city">London</h2>
-      <p class="date">Tuesday, Jan 1st, 2022</p>
+      <h1 class="temp" id="api-temp" >26°</h1>
+      <h2 class="city" id="city-search" >London</h2>
+      <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
       <p class="precip">Sunny</p>
       <img class="sun" src="src/images/sun.png" alt="" />
       <p class="back"></p>
@@ -28,5 +28,6 @@
   <i class="fa-solid fa-magnifying-glass fa-xl fa-beat"></i>
     </div>
     <script src="src/app.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
