Five day forcast

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
-      <h1 class="temp" id="api-temp" >26°</h1>
+      <h1 class="temp" id="api-temp" >26</h1>
       <h2 class="city" id="city-search" >London</h2>
       <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
       <p class="precip">Sunny</p>
@@ -26,6 +26,17 @@
     <input type="search" placeholder="Search Any City" autofocus="on" autocomplete="off" id="city-input" class="searchInput" >
   </form>
   <i class="fa-solid fa-magnifying-glass fa-xl fa-beat"></i>
+  <p class="fiveDay" >Five Day Forcast</p>
+  <img  class="rain" src="src/images/rain.png" alt="">
+  <img  class="cloudy" src="src/images/cloudy.png" alt="">
+  <img  class="rainTwo" src="src/images/rain.png" alt="">
+  <img  class="rainThree" src="src/images/rain.png" alt="">
+  <img  class="rainFour" src="src/images/rain.png" alt="">
+  <p class="dayOne" >28</p>
+  <p class="dayTwo" >22</p>
+  <p class="dayThree" >29</p>
+  <p class="dayFour" >28</p>
+  <p class="dayFive" >27</p>
     </div>
     <script src="src/app.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
