Added defaults to 5 day forcast

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   <img  class="rainTwo" src="src/images/rain.png" alt="">
   <img  class="rainThree" src="src/images/rain.png" alt="">
   <img  class="rainFour" src="src/images/rain.png" alt="">
-  <p class="dayOne" >28</p>
-  <p class="dayTwo" >22</p>
-  <p class="dayThree" >29</p>
-  <p class="dayFour" >28</p>
-  <p class="dayFive" >27</p>
+  <p class="dayOne" >For Style</p>
+  <p class="dayTwo" >For Style</p>
+  <p class="dayThree" >For Style</p>
+  <p class="dayFour" >For Style</p>
+  <p class="dayFive" >For Style</p>
     </div>
     <script src="src/app.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
