Added current location button

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
       <h1 class="temp" id="api-temp" >26</h1>
+      <h1 class="unit">C/F</h1>
       <h2 class="city" id="city-search" >London</h2>
       <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
-      <p class="precip">Sunny</p>
-      <img class="sun" src="src/images/sun.png" alt="" />
       <p class="back"></p>
       <img class="balloon" src="src/images/balloons-2331488__480.webp" alt="">
        <form id="search-form" class="searchForm" >
@@ -37,6 +36,10 @@
   <p class="dayThree" >For Style</p>
   <p class="dayFour" >For Style</p>
   <p class="dayFive" >For Style</p>
+  <p class="wind" >Wind Speed</p>
+  <p class="speed"  id="wind-speed" >40</p>
+  <p class="speedUnit" >Kph</p>
+  <button class="button" id="button"  >Show Current Temp</button>
     </div>
     <script src="src/app.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
