--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
       <h1 class="temp" id="api-temp" >26</h1>
-      <h1 class="unit">C/F</h1>
-      <h2 class="city" id="city-search" >London</h2>
+      <h1 class="unit"  id="fahrenheit-link">F/</h1>
+      <h1 class="unitC" id="celsius-link" >C</h1>
+      <h2 class="city" id="city" >London</h2>
       <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
+      <p class="descrip" id="description">Windy</p>
+      <p class="humidity" >Humidity</p>
+      <p class="humid" id="humidity">20%</p>
       <p class="back"></p>
       <img class="balloon" src="src/images/balloons-2331488__480.webp" alt="">
        <form id="search-form" class="searchForm" >
@@ -36,7 +40,7 @@
   <p class="dayThree" >For Style</p>
   <p class="dayFour" >For Style</p>
   <p class="dayFive" >For Style</p>
-  <p class="wind" >Wind Speed</p>
+  <p class="wind">Wind Speed</p>
   <p class="speed"  id="wind-speed" >40</p>
   <p class="speedUnit" >Kph</p>
   <button class="button" id="button"  >Show Current Temp</button>
