Revert "Remove unit conversion"
This reverts commit 19a4c2523803ece3b3523f3ee66ea7a12c3b94f7.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
-       <h1 class="temp" id="api-temp" >26</h1>
-      <h1 class="unit"  id="fahrenheit-link">F/</h1>
-      <h1 class="unitC" id="celsius-link" >C</h1>
-      <h2 class="city" id="city" >London</h2>
-      <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
+      <h1 class="temp" id="temperature" >26</h1>
+      <h1 class="unit"><a href="#" id="fahrenheit-link">°F</a></h1>
+      <h1 class="unitC">°C<a href="#" id="celsius-link"></a></h1>
+      <h2 class="city" id="city">London</h2>
+      <p class="date" id="date" >Tuesday, Jan 1st, 2022</p>
       <p class="descrip" id="description">Windy</p>
       <p class="humidity" >Humidity</p>
       <p class="humid" id="humidity">20%</p>
