--- a/index.html
+++ b/index.html
@@ -30,16 +30,7 @@
   </form>
   <i class="fa-solid fa-magnifying-glass fa-xl fa-beat"></i>
   <p class="fiveDay" >Five Day Forcast</p>
-  <img  class="rain" src="src/images/rain.png" alt="">
-  <img  class="cloudy" src="src/images/cloudy.png" alt="">
-  <img  class="rainTwo" src="src/images/rain.png" alt="">
-  <img  class="rainThree" src="src/images/rain.png" alt="">
-  <img  class="rainFour" src="src/images/rain.png" alt="">
-  <p class="dayOne" >For Style</p>
-  <p class="dayTwo" >For Style</p>
-  <p class="dayThree" >For Style</p>
-  <p class="dayFour" >For Style</p>
-  <p class="dayFive" >For Style</p>
+ <div class="weather-forecast" id="forecast"></div>
   <p class="wind">Wind Speed</p>
   <p class="speed"  id="wind-speed" >40</p>
   <p class="speedUnit" >Kph</p>
