--- a/index.html
+++ b/index.html
@@ -16,30 +16,20 @@
       <p class="sig">Coded by Nikita M. Hosted by Netlify</p>
       <div></div>
       <h1 class="temp" id="api-temp" >26</h1>
-      <h1 class="unit"  id="fahrenheit-link">F/</h1>
-      <h1 class="unitC" id="celsius-link" >C</h1>
+      <h1 class="unitC">°C</h1>
       <h2 class="city" id="city" >London</h2>
       <p class="date" id="date-time" >Tuesday, Jan 1st, 2022</p>
       <p class="descrip" id="description">Windy</p>
       <p class="humidity" >Humidity</p>
       <p class="humid" id="humidity">20%</p>
       <p class="back"></p>
+      <img src="" alt="">
+      <img  class="sunIcon" src="src/images/sunny.png" alt="">
       <img class="balloon" src="src/images/balloons-2331488__480.webp" alt="">
        <form id="search-form" class="searchForm" >
     <input type="search" placeholder="Search Any City" autofocus="on" autocomplete="off" id="city-input" class="searchInput" >
   </form>
   <i class="fa-solid fa-magnifying-glass fa-xl fa-beat"></i>
-  <p class="fiveDay" >Five Day Forcast</p>
-  <img  class="rain" src="src/images/rain.png" alt="">
-  <img  class="cloudy" src="src/images/cloudy.png" alt="">
-  <img  class="rainTwo" src="src/images/rain.png" alt="">
-  <img  class="rainThree" src="src/images/rain.png" alt="">
-  <img  class="rainFour" src="src/images/rain.png" alt="">
-  <p class="dayOne" >For Style</p>
-  <p class="dayTwo" >For Style</p>
-  <p class="dayThree" >For Style</p>
-  <p class="dayFour" >For Style</p>
-  <p class="dayFive" >For Style</p>
   <p class="wind">Wind Speed</p>
   <p class="speed"  id="wind-speed" >40</p>
   <p class="speedUnit" >Kph</p>
