Add source code

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <p class="speedUnit" >Kph</p>
   <button class="button" id="button"  >Show Current Temp</button>
     </div>
+    <a  class="code" href="https://github.com/Neik1m/vanilla-weather">Open-Source Code</a>
     <script src="src/app.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
